--- a/help.html
+++ b/help.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
     <body>
+        <link rel="stylesheet" href="style2.css" />
         <h1> help </h1>
         <a href="https://arx-halo.github.io/website/">website</a>
+         <img
+            src = "https://i.ytimg.com/vi/Mz28eYun0K4/sddefault.jpg"
+        />
     </head>
 </html>
