--- a/triangle.html
+++ b/triangle.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
     <body>
+        <link rel="stylesheet" href="style2.css" />
         <h1> this is a triangle...</h1>
-        <ins> or is it??? </ins>
+        <p> or is it??? </p>
         <a href="https://arx-halo.github.io/website/">website</a>
            <img
             src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8QSOwu4jNBQq3Ej0t_OtetAc4-At04FSwuQ&s"
