--- a/404.html
+++ b/404.html
@@ -1,7 +1,11 @@
 <!doctype html>
 <html>
     <body>
+        <link rel="stylesheet" href="style3.css" />
         <h1> error </h1>
-        <a href="https://arx-halo.github.io/website/">website</a>
+        <a href="https://arx-halo.github.io/website/">return to main website</a>
+        <img
+            src = "https://cdn-icons-png.flaticon.com/512/755/755014.png"
+        />
     </head>
 </html>
