--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <p>AAAAA</p>
         <a href="https://google.com">google</a>
         <a href="mailto:fr0z7724@gmail.com">my email</a>
-        <a href="tel 1-647-205-5828">call me!</a>
-        <a href="sms 1-647-205-5828">text me!</a>
+        <a href="tel +1-647-205-5828">call me!</a>
+        <a href="sms +1-647-205-5828">text me!</a>
         <a href="help.html">help</a>
         <a href="triangle.html">triangle </a>
         <img
