--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head> 
         <link rel="stylesheet" href="style.css" />
-        <link rel=”icon” type=”image/x-icon” href=”https://d1nhio0ox7pgb.cloudfront.net/_img/o_collection_png/green_dark_grey/128x128/plain/vector_square.png”>
+        <link rel="icon" type="image/png" href="https://d1nhio0ox7pgb.cloudfront.net/_img/o_collection_png/green_dark_grey/128x128/plain/vector_square.png">
 
     </head>
         
