--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head> 
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" type="image/png" href="https://d1nhio0ox7pgb.cloudfront.net/_img/o_collection_png/green_dark_grey/128x128/plain/vector_square.png">
-
+        <title>🛩️🛩️🗼🗼</title>
     </head>
         
     </body>
