--- a/lawn.html
+++ b/lawn.html
@@ -3,10 +3,11 @@
     <head>
 <link rel="stylesheet" href="style4.css" />
         <h1> Lawn </h1>
+        <p> GET OFF OF MY LAWN</p>
         <img
             src = "https://cdn.britannica.com/22/215522-050-8315BB78/green-grass-close-up.jpg"
         />
-        <a href="getoffofmylawn.html">get off of my lawn</a>
-        <a href="index.html">website</a>
+        <a href="getoffofmylawn.html">no</a>
+        <a href="thanks.html">okay</a>
     <head>
 <html>
