--- a/thanks.html
+++ b/thanks.html
@@ -4,7 +4,7 @@
 <link rel="stylesheet" href="style4.css" />
         <h1> Thanks </h1>
         <img
-            src = "https://cdn.creazilla.com/cliparts/60301/thumb-up-emoji-clipart-xl.png"
+            src = "https://img.freepik.com/premium-vector/thumb-up-emoticon_1303870-11.jpg?semt=ais_hybrid&w=740&q=80"
         />
         <a href="index.html">thx bro</a>
     <head>
