--- a/getoffofmylawn.html
+++ b/getoffofmylawn.html
@@ -5,6 +5,6 @@
         <img
             src = "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQGQnxxMBWL2rPavQMJ_vVXvY32j1fX29XMVA&s"
         />
-        <a href="index.html">website</a>
+        <a href="index.html">ok</a>
     <head>
 <html>
