--- a/index.html
+++ b/index.html
@@ -4,9 +4,12 @@
         <link rel="stylesheet" href="style.css" />
         <link rel="icon" type="image/png" href="https://d1nhio0ox7pgb.cloudfront.net/_img/o_collection_png/green_dark_grey/128x128/plain/vector_square.png">
         <title>🛩️</title>
+        <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     </head>
         
     </body>
+
+    <a href="/getoffofmylawn.html" class="bg-blue-500 py-2 px-8 rounded-md text-white hover:bg-blue-600">get off of my lawn</a>
         <h1>AAAAA</h1>
         <ins>AAAAA</ins>
         <p>AAAAA</p>
